--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
   border: 1px; }
 
 .button {
-  color: blue; }
+  color: blue;
+  background-color: yellow; }
 
 /*# sourceMappingURL=style.css.map */
