--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,14 @@
+/* BASE -------------------------------------- */
 .success-header {
   color: black;
   border: 1px;
   border: 1px; }
 
-.button {
+.primary-btn {
   color: blue;
   background-color: yellow; }
+
+.primary-btn {
+  border: 1px solid black; }
 
 /*# sourceMappingURL=style.css.map */
