--- a/css/style.css
+++ b/css/style.css
@@ -1,46 +1,49 @@
+* {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; }
+
+h1 {
+  font-size: 4rem; }
+
 .section {
-  max-width: 1200;
+  max-width: 800px;
+  height: 100vh;
   margin: auto; }
+  @media (max-width: 800px) {
+    .section {
+      margin: 0px 16px; } }
+  .section__quiz {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; }
 
-.container--col1 {
-  flex: 0 0 8.3333333333%; }
-.container--col2 {
-  flex: 0 0 16.6666666667%; }
-.container--col3 {
-  flex: 0 0 25%; }
-.container--col4 {
-  flex: 0 0 33.3333333333%; }
-.container--col5 {
-  flex: 0 0 41.6666666667%; }
-.container--col6 {
-  flex: 0 0 50%; }
-.container--col7 {
-  flex: 0 0 58.3333333333%; }
-.container--col8 {
-  flex: 0 0 66.6666666667%; }
-.container--col9 {
-  flex: 0 0 75%; }
-.container--col10 {
-  flex: 0 0 83.3333333333%; }
-.container--col11 {
-  flex: 0 0 91.6666666667%; }
-.container--col12 {
-  flex: 0 0 100%; }
-.container__quiz {
-  border: #005CBF 1px; }
+.cta-wrapper {
+  margin-top: 1.5rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between; }
 
-.btn-primary {
-  padding: 8px 16px 8px 16px;
+.btn {
+  padding: .5rem 0rem;
   color: black;
-  border-radius: 4px; }
+  border-radius: 4px;
+  font-size: 1rem;
+  font-weight: bold;
+  outline: none;
+  text-transform: uppercase;
+  border: none;
+  background-color: none; }
+  .btn--primary {
+    color: #0086E8; }
+  .btn--silent {
+    color: #C4C4C4; }
 
-.input-answer {
-  padding: 8px 8px 8px 8px; }
-  .input-answer::placeholder {
+.input {
+  font-size: 1.5rem;
+  padding: 1.5rem 0px;
+  border: 0px none;
+  border-bottom: 1px solid #E5E5E5;
+  outline: none; }
+  .input::placeholder {
     color: #E5E5E5; }
-
-.btn-primary {
-  color: white;
-  background-color: #0086E8; }
 
 /*# sourceMappingURL=style.css.map */
