--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,85 +3,85 @@
 // =====================================================
 
 // COLORS
-$color-black: black;
-$color-grey-light: #C4C4C4;
-$color-grey-lighter: #E5E5E5;
-$color-blue-mid: #0086E8;
-$color-blue-dark: #005CBF;
-
-// UNIT
-//$unit: 4px;
+$color--black: black;
+$color--grey-light: #C4C4C4;
+$color--grey-lighter: #E5E5E5;
+$color--blue-mid: #0086E8;
+$color--blue-dark: #005CBF;
 
 // TYPOGRAPHY
-$text-h1: 96px light;
-$text-b1: 16px regular;
-$text-button: 16px bold;
+$font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+$font--h1: 4rem;
+$font--b1: 1.5rem;
+$font--button: 1rem;
 
 // SPACING
-$space-tighter: 4px;
-$space-tight: 8px;
-$space-standard: 12px;
-$space-loose: 24px;
-$space-looser: 40px;
+$space--tighter: .25rem;
+$space--tight: .5rem;
+$space--standard: .75rem;
+$space--loose: 1.5rem;
+$space--looser: 2.5rem;
+$max-width: 800px;
 
-// GRID
-$max-width: 1200;
-$grid-colomns: 12;
+
+
+* {
+    font-family: $font
+}
+
+
+h1 {font-size: $font--h1;}
+
 .section {
     max-width: $max-width;
+    height: 100vh;
     margin: auto;
-}
-
-.container {
-    @for $i from 1 through $grid-colomns {
-        &--col#{$i} {
-            flex: 0 0 100% / $grid-colomns * $i;
-        }
+    @media (max-width: 800px) {
+        margin: 0px 16px;
     }
-    
     &__quiz {
-        border: #005CBF 1px; 
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
-
 }
 
-// =====================================================
-// MIXINS
-// =====================================================
+.cta-wrapper {
+    margin-top: $space--loose;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
 
-
-
-// =====================================================
-// HELPERS
-// =====================================================
-%btn {
-    padding: 8px 16px 8px 16px;
-    color: $color-black;
+.btn {
+    padding: .5rem 0rem;
+    color: $color--black;
     border-radius: 4px;
-}
-
-%input {
-    padding: 8px 8px 8px 8px;
-    &::placeholder {
-        color: $color-grey-lighter;
+    font-size: $font--button;
+    font-weight: bold;
+    outline: none;
+    text-transform: uppercase;
+    border: none;
+    background-color: none;
+    
+    &--primary {
+        color: $color--blue-mid;
     }
+
+    &--silent {
+        color: $color--grey-light;
+    }
+
 }
 
+.input {
+    font-size: $font--b1; 
+    padding: $space--loose 0px;
+    border: 0px none;
+    border-bottom: 1px solid $color--grey-lighter;
+    outline: none;
+    &::placeholder {
+        color: $color--grey-lighter;
+    }
 
-// ======================================================
-// BASE 
-// ======================================================
-.btn-primary {
-    @extend %btn;
-    color: white;
-    background-color: $color-blue-mid;
 }
-
-.input-answer {
-    @extend %input;
-}
-
-
-// ======================================================
-// BREAK-POINTS 
-// ======================================================
