--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@
 
 h1 {
   font-size: 4rem; }
+  @media (max-width: 500px) {
+    h1 {
+      font-size: calc(4rem - 1rem); } }
 
 .section {
   max-width: 800px;
