--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,22 @@
 
 h1 {
   font-size: 4rem; }
-  @media (max-width: 500px) {
+  @media (max-width: 600px) {
     h1 {
       font-size: calc(4rem - 1rem); } }
 
+p {
+  font-size: 2.5rem;
+  text-align: justify; }
+
+br {
+  display: block;
+  content: "";
+  margin-top: 1.5rem; }
+
 .section {
   max-width: 800px;
-  height: 100vh;
+  min-height: 100vh;
   margin: auto; }
   @media (max-width: 800px) {
     .section {
@@ -18,6 +27,10 @@ h1 {
     display: flex;
     flex-direction: column;
     justify-content: center; }
+  .section__birthday-letter {
+    display: none;
+    flex-direction: column;
+    align-items: justify; }
 
 .cta-wrapper {
   margin-top: 1.5rem;
@@ -51,5 +64,13 @@ h1 {
   outline: none; }
   .input::placeholder {
     color: #E5E5E5; }
+
+.birthday-letter__gallery {
+  height: 50vh;
+  width: 100%;
+  background-color: gray; }
+
+.birthday-letter__title {
+  margin: none; }
 
 /*# sourceMappingURL=style.css.map */
