--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,6 +12,7 @@ $color--blue-dark: #005CBF;
 // TYPOGRAPHY
 $font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 $font--h1: 4rem;
+$font--h3: 2.5rem;
 $font--b1: 1.5rem;
 $font--button: 1rem;
 
@@ -30,18 +31,28 @@ $max-width: 800px;
 }
 
 
-
-
 h1 {
     font-size: $font--h1;
-    @media (max-width: 500px) {
+    @media (max-width: 600px) {
         font-size: calc(#{$font--h1} - 1rem);
     }
 }
 
+p {
+    font-size: $font--h3;
+    text-align: justify;
+}
+
+br {
+     display: block;
+     content: "";
+     margin-top: 1.5rem;
+}
+
 .section {
+    // border: 1px solid red;
     max-width: $max-width;
-    height: 100vh;
+    min-height: 100vh;
     margin: auto;
     @media (max-width: 800px) {
         margin: 0px 16px;
@@ -50,6 +61,13 @@ h1 {
         display: flex;
         flex-direction: column;
         justify-content: center;
+    }
+
+    &__birthday-letter {
+        display: none;
+        flex-direction: column;
+        // justify-content: center;
+        align-items: justify;
     }
 }
 
@@ -95,4 +113,23 @@ h1 {
         color: $color--grey-lighter;
     }
 
+}
+
+// .birthday-letter__text {
+//     border: 1px solid red;
+//     display: flex;
+//     flex-direction: column;
+//     // justify-content: center;
+//     align-items: center;
+// }
+
+.birthday-letter__gallery {
+    height: 50vh;
+    width: 100%;
+    background-color: gray;
+}
+
+.birthday-letter__title {
+    // border: 1px solid blue;
+    margin: none;
 }
