--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,17 @@
-* {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; }
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin: 0px 0px; }
 
 h1 {
-  font-size: 4rem; }
+  font-size: 4rem;
+  margin: 0px 0px; }
   @media (max-width: 600px) {
     h1 {
       font-size: calc(4rem - 1rem); } }
 
 p {
   font-size: 2.5rem;
+  margin: 0px 0px;
   text-align: justify; }
 
 br {
@@ -17,20 +20,21 @@ br {
   margin-top: 1.5rem; }
 
 .section {
-  max-width: 800px;
+  max-width: 1200px;
   min-height: 100vh;
-  margin: auto; }
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; }
   @media (max-width: 800px) {
     .section {
       margin: 0px 16px; } }
   .section__quiz {
-    display: flex;
-    flex-direction: column;
-    justify-content: center; }
+    border: 1px solid red;
+    max-width: 800px; }
   .section__birthday-letter {
-    display: none;
-    flex-direction: column;
-    align-items: justify; }
+    padding-top: 6rem;
+    padding-bottom: 6rem; }
 
 .cta-wrapper {
   margin-top: 1.5rem;
@@ -66,11 +70,46 @@ br {
     color: #E5E5E5; }
 
 .birthday-letter__gallery {
-  height: 50vh;
+  border: 1px solid blue;
+  display: grid;
+  grid-template-columns: repeat(12, minmax(0px, 1fr));
+  grid-template-rows: repeat(6, minmax(0px, 1fr));
+  grid-gap: 12px;
+  height: 70vh;
   width: 100%;
-  background-color: gray; }
+  margin-bottom: 3rem; }
+
+.gallery__image-one {
+  background-image: url(./images/image-one.jpg);
+  background-repeat: no-repeat;
+  background-position: left top;
+  border: 1px solid blue;
+  grid-column: 2 / 8;
+  grid-row: 1 / 5; }
+
+.gallery__image-two {
+  background-image: url(./images/image-two.jpg);
+  background-repeat: no-repeat;
+  background-position: left top;
+  border: 1px solid blue;
+  grid-column: 8 / 12;
+  grid-row: 2 / 7; }
+
+.gallery__image-three {
+  border: 1px solid blue;
+  grid-column: 5 / 8;
+  grid-row: 5 / 7; }
+
+.birthday-letter__text {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
 
 .birthday-letter__title {
-  margin: none; }
+  border: 1px solid blue;
+  margin-bottom: 2rem; }
+
+.birthday-letter__body {
+  color: #3F3F3F; }
 
 /*# sourceMappingURL=style.css.map */
