layout is working correctly and images are in place

--- a/css/style.css
+++ b/css/style.css
@@ -28,11 +28,11 @@ br {
   justify-content: center; }
   @media (max-width: 800px) {
     .section {
-      margin: 0px 16px; } }
+      margin: 0px 24px; } }
   .section__quiz {
-    border: 1px solid red;
     max-width: 800px; }
   .section__birthday-letter {
+    display: none;
     padding-top: 6rem;
     padding-bottom: 6rem; }
 
@@ -70,7 +70,6 @@ br {
     color: #E5E5E5; }
 
 .birthday-letter__gallery {
-  border: 1px solid blue;
   display: grid;
   grid-template-columns: repeat(12, minmax(0px, 1fr));
   grid-template-rows: repeat(6, minmax(0px, 1fr));
@@ -79,24 +78,23 @@ br {
   width: 100%;
   margin-bottom: 3rem; }
 
-.gallery__image-one {
-  background-image: url(./images/image-one.jpg);
+.gallery__image-one, .gallery__image-two, .gallery__image-three {
+  background-size: cover;
   background-repeat: no-repeat;
-  background-position: left top;
-  border: 1px solid blue;
+  background-position: center; }
+
+.gallery__image-one {
+  background-image: url(../images/image-one.jpg);
   grid-column: 2 / 8;
   grid-row: 1 / 5; }
 
 .gallery__image-two {
-  background-image: url(./images/image-two.jpg);
-  background-repeat: no-repeat;
-  background-position: left top;
-  border: 1px solid blue;
+  background-image: url(../images/image-two.jpg);
   grid-column: 8 / 12;
   grid-row: 2 / 7; }
 
 .gallery__image-three {
-  border: 1px solid blue;
+  background-image: url(../images/image-three.jpg);
   grid-column: 5 / 8;
   grid-row: 5 / 7; }
 
@@ -106,7 +104,6 @@ br {
   align-items: center; }
 
 .birthday-letter__title {
-  border: 1px solid blue;
   margin-bottom: 2rem; }
 
 .birthday-letter__body {
