--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,43 @@
+.quiz__question, .birthday-letter__title {
+  font-size: 5rem;
+  font-weight: 700; }
+  @media (max-width: 600px) {
+    .quiz__question, .birthday-letter__title {
+      font-size: 4rem; } }
+  @media (max-width: 400px) {
+    .quiz__question, .birthday-letter__title {
+      font-size: 3rem; } }
+
+.birthday-letter__body {
+  font-size: 2.5rem;
+  font-weight: 500; }
+  @media (max-width: 600px) {
+    .birthday-letter__body {
+      font-size: 2rem; } }
+  @media (max-width: 400px) {
+    .birthday-letter__body {
+      font-size: 1.75rem; } }
+
+.input {
+  font-size: 1.5rem;
+  font-weight: 300; }
+  @media (max-width: 600px) {
+    .input {
+      font-size: 1.25rem; } }
+  @media (max-width: 400px) {
+    .input {
+      font-size: 1rem; } }
+
+.btn {
+  font-size: 1rem;
+  font-weight: 300; }
+  @media (max-width: 600px) {
+    .btn {
+      font-size: .75rem; } }
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   margin: 0px 0px; }
-
-h1 {
-  font-size: 4rem;
-  margin: 0px 0px; }
-  @media (max-width: 600px) {
-    h1 {
-      font-size: calc(4rem - 1rem); } }
-
-p {
-  font-size: 2.5rem;
-  margin: 0px 0px;
-  text-align: justify; }
-
-br {
-  display: block;
-  content: "";
-  margin-top: 1.5rem; }
 
 .section {
   max-width: 1200px;
@@ -25,16 +45,17 @@ br {
   margin: auto;
   display: flex;
   flex-direction: column;
-  justify-content: center; }
-  @media (max-width: 800px) {
-    .section {
-      margin: 0px 24px; } }
+  justify-content: center;
+  margin: 0px 24px; }
   .section__quiz {
     max-width: 800px; }
   .section__birthday-letter {
-    display: none;
+    display: flex;
     padding-top: 6rem;
     padding-bottom: 6rem; }
+
+.quiz__question {
+  margin: 0px 0px; }
 
 .cta-wrapper {
   margin-top: 1.5rem;
@@ -47,8 +68,7 @@ br {
   padding: .5rem 0rem;
   color: black;
   border-radius: 4px;
-  font-size: 1rem;
-  font-weight: bold;
+  font-weight: 700;
   outline: none;
   text-transform: uppercase;
   border: none;
@@ -61,11 +81,11 @@ br {
     color: #C4C4C4; }
 
 .input {
-  font-size: 1.5rem;
   padding: 1.5rem 0px;
   border: 0px none;
   border-bottom: 1px solid #E5E5E5;
-  outline: none; }
+  outline: none;
+  margin-top: 0.75rem; }
   .input::placeholder {
     color: #E5E5E5; }
 
@@ -77,6 +97,10 @@ br {
   height: 70vh;
   width: 100%;
   margin-bottom: 3rem; }
+  @media (max-width: 600px) {
+    .birthday-letter__gallery {
+      height: 40vh;
+      margin-bottom: 1.5rem; } }
 
 .gallery__image-one, .gallery__image-two, .gallery__image-three {
   background-size: cover;
@@ -87,16 +111,26 @@ br {
   background-image: url(../images/image-one.jpg);
   grid-column: 2 / 8;
   grid-row: 1 / 5; }
+  @media (max-width: 600px) {
+    .gallery__image-one {
+      display: none; } }
 
 .gallery__image-two {
   background-image: url(../images/image-two.jpg);
   grid-column: 8 / 12;
   grid-row: 2 / 7; }
+  @media (max-width: 600px) {
+    .gallery__image-two {
+      grid-column: 1 / 13;
+      grid-row: 1 / 7; } }
 
 .gallery__image-three {
   background-image: url(../images/image-three.jpg);
   grid-column: 5 / 8;
   grid-row: 5 / 7; }
+  @media (max-width: 600px) {
+    .gallery__image-three {
+      display: none; } }
 
 .birthday-letter__text {
   display: flex;
@@ -107,6 +141,12 @@ br {
   margin-bottom: 2rem; }
 
 .birthday-letter__body {
+  margin: 0px 0px;
   color: #3F3F3F; }
+
+br {
+  display: block;
+  content: "";
+  margin-top: 1.5rem; }
 
 /*# sourceMappingURL=style.css.map */
