--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,5 @@
 // =====================================================
-// VARIABLES 
+// Particles
 // =====================================================
 
 // COLORS
@@ -10,12 +10,49 @@ $color--gray-lighter: #E5E5E5;
 $color--blue-mid: #0086E8;
 $color--blue-dark: #005CBF;
 
-// TYPOGRAPHY
+// Simple Comps
 $font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-$font--h1: 4rem;
-$font--h3: 2.5rem;
-$font--b1: 1.5rem;
-$font--button: 1rem;
+%font--h1 {
+    font-size: 5rem;
+    font-weight: 700;
+    @media (max-width: 600px) {
+        font-size: 4rem;
+    }
+    @media (max-width: 400px) {
+        font-size: 3rem;
+    }
+}
+%font--h3 {
+    font-size: 2.5rem;
+    font-weight: 500;
+
+    @media (max-width: 600px) {
+        font-size: 2rem;
+    }
+
+    @media (max-width: 400px) {
+        font-size: 1.75rem;
+    }
+}
+%font--b1 {
+    font-size: 1.5rem;
+    font-weight: 300;
+
+    @media (max-width: 600px) {
+        font-size: 1.25rem;
+    }
+    @media (max-width: 400px) {
+        font-size: 1rem;
+    }
+} 
+%font--b2 {
+    font-size: 1rem;
+    font-weight: 300;
+
+    @media (max-width: 600px) {
+        font-size: .75rem;
+    }
+}
 
 // SPACING
 $space--tighter: .25rem;
@@ -32,48 +69,29 @@ body {
     margin: 0px 0px;
 }
 
-
-
-h1 {
-    font-size: $font--h1;
-    margin: 0px 0px;
-    @media (max-width: 600px) {
-        font-size: calc(#{$font--h1} - 1rem);
-    }
-}
-
-p {
-    font-size: $font--h3;
-    margin: 0px 0px;
-    text-align: justify;
-}
-
-br {
-     display: block;
-     content: "";
-     margin-top: 1.5rem;
-}
-
 .section {
-    // border: 1px solid red;
     max-width: $max-width;
     min-height: 100vh;
     margin: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    @media (max-width: 800px) {
-        margin: 0px 24px;
-    }
+    margin: 0px 24px;
+
     &__quiz {
         max-width: 800px;
     }
 
     &__birthday-letter {
-        display: none;
+        display: flex;
         padding-top: 6rem; 
         padding-bottom: 6rem;
     }
+}
+
+.quiz__question {
+    @extend %font--h1;
+    margin: 0px 0px;
 }
 
 .cta-wrapper {
@@ -84,19 +102,20 @@ br {
 }
 
 .btn {
+    @extend %font--b2;
     cursor: pointer;
     padding: .5rem 0rem;
     color: $color--black;
     border-radius: 4px;
-    font-size: $font--button;
-    font-weight: bold;
+    font-weight: 700;
     outline: none;
     text-transform: uppercase;
     border: none;
     background-color: none;
-    
+
     &--primary {
         color: $color--blue-mid;
+
         &:hover {
             color: $color--blue-dark;
         }
@@ -105,15 +124,15 @@ br {
     &--silent {
         color: $color--gray-light;
     }
-
 }
 
 .input {
-    font-size: $font--b1; 
+    @extend %font--b1; 
     padding: $space--loose 0px;
     border: 0px none;
     border-bottom: 1px solid $color--gray-lighter;
     outline: none;
+    margin-top: $space--standard;
     &::placeholder {
         color: $color--gray-lighter;
     }
@@ -128,6 +147,11 @@ br {
     height: 70vh;
     width: 100%;
     margin-bottom: 3rem;
+    @media (max-width: 600px) {
+        height: 40vh;
+        margin-bottom: 1.5rem;
+    }
+
 }
 
 %image-center {
@@ -141,6 +165,10 @@ br {
     @extend %image-center;
     grid-column: 2 / 8;
     grid-row: 1 / 5;
+    @media (max-width: 600px) {
+        display: none;
+    }
+
 }
 
 .gallery__image-two {
@@ -148,6 +176,10 @@ br {
     @extend %image-center;
     grid-column: 8 / 12;
     grid-row: 2 / 7;
+    @media (max-width: 600px) {
+        grid-column: 1 / 13;
+        grid-row: 1 / 7;
+    }
 }
 
 .gallery__image-three {
@@ -155,6 +187,9 @@ br {
     @extend %image-center;
     grid-column: 5 / 8;
     grid-row: 5 / 7;
+    @media (max-width: 600px) {
+        display: none;
+    }
 }
 
 .birthday-letter__text {
@@ -167,6 +202,19 @@ br {
     margin-bottom: 2rem;
 }
 
+.birthday-letter__title {
+    @extend %font--h1;
+}
+
 .birthday-letter__body {
+    @extend %font--h3;
+    margin: 0px 0px;
+    // text-align: justify;
     color: $color--gray-dark;
+}
+
+br {
+    display: block;
+    content: "";
+    margin-top: 1.5rem;
 }
