--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,7 +10,7 @@ $color--gray-lighter: #E5E5E5;
 $color--blue-mid: #0086E8;
 $color--blue-dark: #005CBF;
 
-// Simple Comps
+// Typography 
 $font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 %font--h1 {
     font-size: 5rem;
@@ -83,7 +83,7 @@ body {
     }
 
     &__birthday-letter {
-        display: flex;
+        display: none;
         padding-top: 6rem; 
         padding-bottom: 6rem;
     }
