--- a/css/style.css
+++ b/css/style.css
@@ -42,11 +42,10 @@ body {
 .section {
   max-width: 1200px;
   min-height: 100vh;
-  margin: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 0px 24px; }
+  margin: auto; }
   .section__quiz {
     max-width: 800px; }
   .section__birthday-letter {
